@@ -4,6 +4,7 @@ import java.time.Duration;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.EnumMap;
 import java.util.HashMap;
@@ -27,7 +28,7 @@ import com.kafkick.core.admin.overview.calculator.CustomerOutcomeCalculator.Outc
 import com.kafkick.core.admin.overview.calculator.CustomerOutcomeCalculator.OutcomeInput;
 import com.kafkick.core.admin.overview.calculator.IssuanceFlowCalculator.IssuanceBucket;
 import com.kafkick.core.admin.overview.calculator.IssuanceFlowCalculator.IssuanceFlowInput;
-import com.kafkick.core.admin.overview.observation.CampaignObservationTarget;
+import com.kafkick.core.admin.overview.observation.CouponRoundObservationTarget;
 import com.kafkick.core.admin.overview.observation.OverviewObservationData;
 import com.kafkick.core.admin.overview.observation.OverviewObservationRequest;
 import com.kafkick.core.admin.overview.observation.OverviewObservationSource;
@@ -138,15 +139,15 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         return new OverviewObservationData(request, flowInputs, outcomeInput, aggregateRate, latency);
     }
 
-    /** OPEN 캠페인은 grouped 결과로 조립하고 그 밖의 캠페인은 질의 없이 N_A로 만듭니다. */
+    /** OPEN 쿠폰 회차는 grouped 결과로 조립하고 그 밖의 쿠폰 회차는 질의 없이 N_A로 만듭니다. */
     private List<IssuanceFlowInput> observeFlows(
             OverviewObservationRequest request, Instant evaluationAt, QueryBudget budget
     ) {
-        List<CampaignObservationTarget> openTargets = request.campaignTargets().stream()
-                .filter(target -> target.campaignStatus() == CouponRoundStatus.OPEN)
+        List<CouponRoundObservationTarget> openTargets = request.couponRoundTargets().stream()
+                .filter(target -> target.couponRoundStatus() == CouponRoundStatus.OPEN)
                 .toList();
         if (openTargets.isEmpty()) {
-            return request.campaignTargets().stream()
+            return request.couponRoundTargets().stream()
                     .map(target -> missingFlow(target, SourceStatus.N_A))
                     .toList();
         }
@@ -175,8 +176,8 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         }
 
         List<IssuanceFlowInput> result = new ArrayList<>();
-        for (CampaignObservationTarget target : request.campaignTargets()) {
-            result.add(target.campaignStatus() == CouponRoundStatus.OPEN
+        for (CouponRoundObservationTarget target : request.couponRoundTargets()) {
+            result.add(target.couponRoundStatus() == CouponRoundStatus.OPEN
                     ? openInputs.get(target.couponId())
                     : missingFlow(target, SourceStatus.N_A));
         }
@@ -187,7 +188,7 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
     private Map<Long, IssuanceFlowInput> buildOpenFlows(
             Instant snapshotAt,
             OverviewCalculationPolicy policy,
-            List<CampaignObservationTarget> targets,
+            List<CouponRoundObservationTarget> targets,
             List<PromRangeSeries> trend,
             List<PromSample> lastSuccess,
             List<PromSample> freshness,
@@ -214,7 +215,7 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         Map<Long, Instant> lastSuccessByCoupon = epochByCoupon(lastSuccess, snapshotAt);
         Map<StageKey, List<PromRangePoint>> trendByStage = trendByStage(trend);
         Map<Long, IssuanceFlowInput> inputs = new LinkedHashMap<>();
-        for (CampaignObservationTarget target : targets) {
+        for (CouponRoundObservationTarget target : targets) {
             inputs.put(target.couponId(), buildOpenFlow(
                     snapshotAt, policy, target,
                     freshnessByCoupon, lastSuccessByCoupon, trendByStage, failureObservedAt.get()));
@@ -222,11 +223,11 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         return Map.copyOf(inputs);
     }
 
-    /** 캠페인 하나의 값 존재·신선도·연속 조건을 평가해 O1 입력을 만듭니다. */
+    /** 쿠폰 회차 하나의 값 존재·신선도·연속 조건을 평가해 O1 입력을 만듭니다. */
     private IssuanceFlowInput buildOpenFlow(
             Instant snapshotAt,
             OverviewCalculationPolicy policy,
-            CampaignObservationTarget target,
+            CouponRoundObservationTarget target,
             Map<Long, Instant> freshnessByCoupon,
             Map<Long, Instant> lastSuccessByCoupon,
             Map<StageKey, List<PromRangePoint>> trendByStage,
@@ -279,7 +280,7 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         status = combineValueFlowAndStockStatus(
                 status, target.stockStatus(), attempts > 0d || successes > 0d);
         return new IssuanceFlowInput(
-                couponId, target.campaignStatus(), target.stockAvailable(),
+                couponId, target.couponRoundStatus(), target.stockAvailable(),
                 currentStart, snapshotAt, trendStart, snapshotAt,
                 attempts, successes, comparisonSuccesses,
                 comparisonStart, comparisonEnd, alignment.buckets(), lastCompletedAt,
@@ -442,13 +443,25 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         }
     }
 
+    /**
+     * O3 가 해석할 줄 아는 raw outcome label 집합입니다.
+     *
+     * <p>계측이 내보내는 라벨과 같은 집합이어야 합니다 — 한쪽만 늘면 컴파일도 기존 테스트도
+     * 안 깨진 채로 이 영역이 통째로 죽습니다. {@code OutcomeLabelCoverageContractTest} 가 봅니다.
+     *
+     * @return 알려진 raw outcome label
+     */
+    static java.util.Set<String> knownOutcomeLabels() {
+        return OUTCOME_TYPES.keySet();
+    }
+
     /** O3 벡터가 정의된 raw label만 포함하는지 확인해 새 label을 기존 결과로 오인하지 않습니다. */
     private static boolean onlyKnownOutcomeLabels(List<PromSample> samples) {
         return samples.stream().allMatch(sample ->
                 OUTCOME_TYPES.containsKey(sample.label(OverviewPrometheusContract.OUTCOME)));
     }
 
-    /** snapshot inventory가 정확히 14개 known label의 존재를 증명하는지 확인합니다. */
+    /** snapshot inventory가 known label 전부의 존재를 증명하는지 확인합니다. */
     private static Optional<Map<String, Boolean>> completeOutcomeInventory(List<PromSample> samples) {
         if (samples.size() != OUTCOME_TYPES.size()) {
             return Optional.empty();
@@ -467,7 +480,7 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
                 ? Optional.of(Map.copyOf(labels)) : Optional.empty();
     }
 
-    /** 정확히 14개 raw label의 유한한 비음수 increase를 double Map으로 변환합니다. */
+    /** known label 전부의 유한한 비음수 increase를 double Map으로 변환합니다. */
     private static Optional<Map<String, Double>> completeOutcomeIncreases(List<PromSample> samples) {
         if (samples.size() != OUTCOME_TYPES.size()) {
             return Optional.empty();
@@ -566,19 +579,19 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         return OptionalDouble.of(samples.getFirst().value());
     }
 
-    /** 캠페인별 epoch gauge/timestamp 표본을 실제 시각으로 바꿉니다. */
+    /** 쿠폰 회차별 epoch gauge/timestamp 표본을 실제 시각으로 바꿉니다. */
     private static Map<Long, Instant> epochByCoupon(List<PromSample> samples, Instant snapshotAt) {
         Map<Long, Instant> epochs = new HashMap<>();
         for (PromSample sample : samples) {
             Instant epoch = epochOf(sample.value(), snapshotAt);
             if (epochs.put(couponId(sample), epoch) != null) {
-                throw new PromQueryException("grouped 캠페인 시각 표본이 중복되었습니다.");
+                throw new PromQueryException("grouped 쿠폰 회차 시각 표본이 중복되었습니다.");
             }
         }
         return Map.copyOf(epochs);
     }
 
-    /** range 시계열을 캠페인·stage별 점 목록으로 바꿉니다. */
+    /** range 시계열을 쿠폰 회차·stage별 점 목록으로 바꿉니다. */
     private static Map<StageKey, List<PromRangePoint>> trendByStage(List<PromRangeSeries> series) {
         Map<StageKey, List<PromRangePoint>> trends = new HashMap<>();
         for (PromRangeSeries item : series) {
@@ -673,33 +686,33 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
 
     /** 대상 목록 전체를 같은 값 없는 상태의 O1 입력으로 만듭니다. */
     private static Map<Long, IssuanceFlowInput> missingFlows(
-            List<CampaignObservationTarget> targets, SourceStatus status
+            List<CouponRoundObservationTarget> targets, SourceStatus status
     ) {
         Map<Long, IssuanceFlowInput> inputs = new LinkedHashMap<>();
-        for (CampaignObservationTarget target : targets) {
+        for (CouponRoundObservationTarget target : targets) {
             inputs.put(target.couponId(), missingFlow(target, status));
         }
         return Map.copyOf(inputs);
     }
 
-    /** 캠페인 하나를 값 없는 O1 입력으로 만듭니다. */
-    private static IssuanceFlowInput missingFlow(CampaignObservationTarget target, SourceStatus status) {
+    /** 쿠폰 회차 하나를 값 없는 O1 입력으로 만듭니다. */
+    private static IssuanceFlowInput missingFlow(CouponRoundObservationTarget target, SourceStatus status) {
         if (status.carriesValue()) {
             throw new IllegalArgumentException("값 없는 O1 상태가 아닙니다: " + status);
         }
         SourceStatus combinedStatus = combineMissingFlowAndStockStatus(target, status);
         return new IssuanceFlowInput(
-                target.couponId(), target.campaignStatus(), null,
+                target.couponId(), target.couponRoundStatus(), null,
                 null, null, null, null, null, null, null,
                 null, null, List.of(), null, null, combinedStatus, null);
     }
 
     /** 값 없는 O1 metric과 OPEN 재고 상태 중 UNAVAILABLE, PENDING 순으로 더 나쁜 상태를 선택합니다. */
     private static SourceStatus combineMissingFlowAndStockStatus(
-            CampaignObservationTarget target,
+            CouponRoundObservationTarget target,
             SourceStatus flowStatus
     ) {
-        if (target.campaignStatus() != CouponRoundStatus.OPEN || target.stockStatus().carriesValue()) {
+        if (target.couponRoundStatus() != CouponRoundStatus.OPEN || target.stockStatus().carriesValue()) {
             return flowStatus;
         }
         if (flowStatus == SourceStatus.UNAVAILABLE || target.stockStatus() == SourceStatus.UNAVAILABLE) {
@@ -742,7 +755,7 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         types.put("ALREADY_ISSUED", AdminOverviewSnapshot.CustomerOutcomeType.ALREADY_ISSUED);
         types.put("STOCK_EXHAUSTED", AdminOverviewSnapshot.CustomerOutcomeType.STOCK_EXHAUSTED);
         types.put("NOT_OPENED", AdminOverviewSnapshot.CustomerOutcomeType.INELIGIBLE);
-        types.put("CAMPAIGN_CLOSED", AdminOverviewSnapshot.CustomerOutcomeType.INELIGIBLE);
+        types.put("COUPON_ROUND_CLOSED", AdminOverviewSnapshot.CustomerOutcomeType.INELIGIBLE);
         types.put("GRADE_NOT_ELIGIBLE", AdminOverviewSnapshot.CustomerOutcomeType.INELIGIBLE);
         types.put("INVALID_TRANSITION", AdminOverviewSnapshot.CustomerOutcomeType.INELIGIBLE);
         types.put("NO_ENTRY_TOKEN", AdminOverviewSnapshot.CustomerOutcomeType.ENTRY_EXPIRED);
@@ -750,10 +763,22 @@ public class PromOverviewObservationSource implements OverviewObservationSource 
         types.put("TEMPORARILY_UNAVAILABLE", AdminOverviewSnapshot.CustomerOutcomeType.SYSTEM_FAILURE);
         types.put("INTERNAL_ERROR", AdminOverviewSnapshot.CustomerOutcomeType.SYSTEM_FAILURE);
         types.put("UNMAPPED", AdminOverviewSnapshot.CustomerOutcomeType.SYSTEM_FAILURE);
-        return Map.copyOf(types);
+        // v2 게이트의 사고 넷. 넷의 공통점은 고객이 아무것도 못 받았다는 것 하나다 —
+        // 그래서 SYSTEM_FAILURE 로 집계한다. 재시도로 풀리는지는 별개의 축이고 넷이 갈린다.
+        types.put("VALUE_CORRUPT", AdminOverviewSnapshot.CustomerOutcomeType.SYSTEM_FAILURE);
+        // -9 만 기다리면 풀린다. 재구성 창이라 Retry-After 를 달아 내보낸다(CouponIssueV2ErrorCode).
+        // 창 안에서는 정상이고 창 밖에서 0이 아니면 이상이라, 이 값만 보고 즉시 개입을 판단하면 안 된다.
+        types.put("GATE_NOT_READY", AdminOverviewSnapshot.CustomerOutcomeType.SYSTEM_FAILURE);
+        types.put("BAD_ARGUMENT", AdminOverviewSnapshot.CustomerOutcomeType.SYSTEM_FAILURE);
+        types.put("COUNTER_UNREADABLE", AdminOverviewSnapshot.CustomerOutcomeType.SYSTEM_FAILURE);
+        // 멱등 재시도는 장애가 아니다. 실패율 셀렉터에서도 실패로 세지 않는다.
+        types.put("REPLAY_IN_PROGRESS", AdminOverviewSnapshot.CustomerOutcomeType.RETRY_IN_PROGRESS);
+        // Map.copyOf 가 아니다. 순회 순서가 불안정하면 이 집합을 쓰는 쪽이 회차마다 다른
+        // 순서를 보고, 그 차이는 예외 없이 값으로만 드러난다.
+        return Collections.unmodifiableMap(types);
     }
 
-    /** 캠페인과 stage의 grouped 결과 키입니다. */
+    /** 쿠폰 회차와 stage의 grouped 결과 키입니다. */
     private record StageKey(Long couponId, String stage) {
         /** 키 구성요소를 필수로 검증합니다. */
         private StageKey {
